fix: ui alignment

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -58,7 +58,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  margin: 0;
+  /* margin: 0; */
 }
 
 body {
