--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -21,7 +21,7 @@
   height: 100%;
   min-height: 100vh;
 
-  margin: 0 auto;
+  /* margin: 0 auto; */
 
   padding-top: 10rem;
 
